[tool.poetry]
name = "tokeng"
version = "0.1.0"
description = ""
authors = ["Zakhar Kogan <m1706924@edu.misis.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
